--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+ADMIN_USER=
+ADMIN_PHONE=
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
@@ -19,7 +24,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
